<resources>
    <string name="app_name">STIKI Event Organizer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_participants">Participants</string>
    <string name="title_events">My Events</string>
    <string name="title_invitations">Invitations</string>
    <string name="title_profile">Profile</string>
    <string name="failed_load">Failed to load data</string>
    <string name="seo_hint_participant_name">Participant Name</string>
    <string name="seo_btn_add">Add</string>
    <string name="seo_btn_cancel">Cancel</string>
    <string name="seo_btn_save">Save</string>
    <string name="seo_hint_participant_email">Participant Email</string>
    <string name="seo_hint_participant_telp">Participant Telp</string>
    <string name="seo_hint_participant_address">Participant Address</string>
    <string name="tab_event">Event</string>
    <string name="tab_participant">Participant</string>
    <string name="seo_hint_event_name">Event Name</string>
    <string name="seo_hint_event_description">Event Description</string>
    <string name="seo_hint_event_date">Event Date</string>
    <string name="seo_hint_event_link_maps">Link Maps</string>
    <string name="seo_hint_event_location">Event Location</string>
    <string name="seo_hint_event_cp">Contact Person</string>
    <string name="seo_hint_username">Your Username</string>
    <string name="seo_sign_up">Create Account</string>
    <string name="seo_sign_in">Sign in</string>
    <string name="seo_hint_password">Your Password</string>
    <string name="seo_register">Register</string>
    <string name="seo_have_account">Have Account</string>
    <string name="seo_hint_name">Your Name</string>
    <string name="seo_hint_email">Your Email</string>
    <string name="seo_hint_telp">Your Phone Number</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_header_about">About</string>
    <string name="url_faq">https://www.linkedin.com/in/galih-anggi-satriawan-143a69141/</string>
    <string name="creator_email">satriawan.galih99@gmail.com</string>
    <string name="web_institution">http://stiki.ac.id</string>
    <string name="app_version">Version 1.0.0 \u00a9 2019</string>
    <string name="title_version">Version</string>
    <string name="title_institution">Institution</string>
    <string name="creator_institution">STIKI Malang</string>
    <string name="seo_profile_username">Username</string>
    <string name="profile_header">Profile</string>
    <string name="dummy_username">galihsatriawan</string>
    <string name="seo_profile_email">Email</string>
    <string name="dummy_email">galih@stiki.ac.id</string>
    <string name="other_header">Other</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="title_description">Description</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="title_event_name">Event Name</string>
    <string name="title_event_date">Event Date</string>
    <string name="title_event_location">Location</string>
    <string name="title_event_cp">Contact Person</string>
    <string name="title_event_eo">Event Organizer</string>
    <string name="CLOSE">Close</string>
    <string name="dummy_content_text">Content</string>
    <string name="dummy_title">Title</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="SEARCH_IN_WEB">Search</string>
    <string name="tipe">Tipe</string>
    <string name="data">Data</string>
    <string name="seo_scan">Scan</string>
    <string name="VALIDATE">Validate</string>
    <string name="valid">Valid</string>
    <string name="status">Status</string>
    <string name="ticket_detail">Ticket Detail</string>
    <string name="id_ticket">ID Ticket</string>
    <string name="title_camera_permission">Camera Permission</string>
    <string name="text_camera_permission">Please give permission for camera</string>
    <string name="OK">OK</string>
    <string name="seo_name">Name</string>
    <string name="seo_email">Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="SEARCH_LOCATION">Search Location</string>
    <string name="go_to_picker_activity">Go to picker</string>
    <string name="seo_hint_your_location">Your Location</string>
    <string name="seo_hint_detail_location">Detail Location</string>
    <string name="seo_info_has_create_event">Please create th event first</string>
    <string name="seo_info_check_camera">Please place your camera properly</string>
    <string name="seo_info_not_grant_validate">You don\'t have any permission to validate</string>
    <string name="txt_content_description">Content Description</string>
    <string name="empty_data">No data found</string>
    <string name="tab_summary">Summary</string>
    <string name="seo_event_detail">Event Detail</string>
    <string name="seo_event_summary">Event Summary</string>
    <string name="seo_description">Description</string>
    <string name="seo_date">Date</string>
    <string name="seo_location">Location</string>
    <string name="seo_participants_total">Participants</string>
    <string name="seo_hint_event_participant">Event Participant</string>
    <string name="seo_participants_attend">Attendance</string>
    <string name="seo_participants_not_attend">Absence</string>
    <string name="seo_info_not_the_event">The Event is different</string>
</resources>
