<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_invitations">

    <fragment
        android:id="@+id/navigation_invitations"
        android:name="id.shobrun.stikieventorganizer.ui.invitations.InvitationsFragment"
        android:label="@string/title_invitations"
        tools:layout="@layout/fragment_invitations" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="id.shobrun.stikieventorganizer.ui.myevents.MyEventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_participants"
        android:name="id.shobrun.stikieventorganizer.ui.myparticipants.MyParticipantsFragment"
        android:label="@string/title_participants"
        tools:layout="@layout/fragment_participants" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="id.shobrun.stikieventorganizer.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>