<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="id.shobrun.stikieventorganizer.ui.myevents.detail.EventSummaryViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin_xbig"
            style="@style/Widget.MaterialComponents.CardView"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@android:color/background_light"
            app:cardForegroundColor="@android:color/transparent"
            >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{vm.isNewEvent ? View.GONE :View.VISIBLE}"
                >
                <ImageView
                    android:id="@+id/logoDetail"
                    android:layout_marginTop="@dimen/activity_vertical_margin_small"
                    android:layout_width="80dp"
                    android:src="@drawable/ic_event"
                    android:layout_centerHorizontal="true"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seo_event_summary"
                    android:layout_below="@+id/logoDetail"
                    android:layout_marginTop="@dimen/activity_vertical_margin_small"
                    android:layout_centerHorizontal="true"
                    style="@style/TextAppearance.AppCompat.Display1"/>
                <View
                    android:id="@+id/vLine"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_below="@+id/tv_title"
                    android:layout_marginTop="@dimen/activity_vertical_margin_small"
                    android:background="@color/quantum_cyanA200"
                    />
                <TableLayout
                    android:layout_below="@+id/vLine"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/size_min_width_title_row"
                            android:maxWidth="@dimen/size_max_width_title_row"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:text="@string/seo_name"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" :  "
                            />
                        <TextView
                            android:id="@+id/tvEventName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="110dp"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="@string/seo_hint_event_name"
                            eventName="@{vm.eventLiveData}"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="@dimen/activity_vertical_margin_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/size_min_width_title_row"
                            android:maxWidth="@dimen/size_max_width_title_row"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:text="@string/seo_description"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" :  "
                            />
                        <TextView
                            android:id="@+id/tvEventDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="@string/seo_hint_event_description"
                            eventDescription="@{vm.eventLiveData}"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="@dimen/activity_vertical_margin_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/size_min_width_title_row"
                            android:maxWidth="@dimen/size_max_width_title_row"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:text="@string/seo_date"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" :  "
                            />
                        <TextView
                            android:id="@+id/tvEventDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="@string/seo_hint_event_date"
                            eventDate="@{vm.eventLiveData}"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="@dimen/activity_vertical_margin_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/size_min_width_title_row"
                            android:maxWidth="@dimen/size_max_width_title_row"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:text="@string/seo_location"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" :  "
                            />
                        <TextView
                            android:id="@+id/tvEventLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="@string/seo_hint_event_location"
                            eventLocation="@{vm.eventLiveData}"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="@dimen/activity_vertical_margin_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/size_min_width_title_row"
                            android:maxWidth="@dimen/size_max_width_title_row"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:text="@string/seo_participants_total"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" :  "
                            />
                        <TextView
                            android:id="@+id/tvEventParticipant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="@string/seo_hint_event_participant"
                            eventParticipant="@{vm.eventLiveData}"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="@dimen/activity_vertical_margin_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/size_min_width_title_row"
                            android:maxWidth="@dimen/size_max_width_title_row"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:text="@string/seo_participants_attend"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" :  "
                            />
                        <TextView
                            android:id="@+id/tvEventParticipantAttend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="@string/seo_hint_event_participant"
                            eventParticipantAttend="@{vm.eventLiveData}"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="@dimen/activity_vertical_margin_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/size_min_width_title_row"
                            android:maxWidth="@dimen/size_max_width_title_row"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:text="@string/seo_participants_not_attend"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" :  "
                            />
                        <TextView
                            android:id="@+id/tvEventParticipantNotAttend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="@string/seo_hint_event_participant"
                            eventParticipantNotAttend="@{vm.eventLiveData}"
                            />
                    </TableRow>
                </TableLayout>
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{vm.loading? View.VISIBLE : View.GONE}"
                />
            <LinearLayout
                android:id="@+id/container_message"
                visibleMessageItem="@{vm.eventLiveData}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{vm.isNewEvent ? View.VISIBLE: View.GONE}">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/activity_vertical_margin_small"
                    android:contentDescription="@string/txt_content_description"
                    android:src="@drawable/ic_error_black_24dp" />

                <TextView
                    messageItem="@{vm.eventLiveData}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seo_info_has_create_event"/>
            </LinearLayout>
        </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>