<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="id.shobrun.stikieventorganizer.ui.myevents.detail.EventDetailViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/container_button"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                >
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="@{vm.loading || vm.loadingUpdate ? View.VISIBLE : View.GONE}"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.SEO.TextInputLayout"
                    android:hint="@string/seo_hint_event_name"
                    app:errorEnabled="true"
                    android:enabled="@{!(vm.loading || vm.loadingUpdate)}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.eventName}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.SEO.TextInputLayout"
                    android:hint="@string/seo_hint_event_description"
                    app:errorEnabled="true"
                    android:enabled="@{!(vm.loading || vm.loadingUpdate)}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={vm.eventDescription}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.SEO.TextInputLayout"
                    android:hint="@string/seo_hint_event_date"
                    app:errorEnabled="true"
                    android:enabled="@{!(vm.loading || vm.loadingUpdate)}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_event_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:text="@={vm.eventDate}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.SEO.TextInputLayout"
                    android:hint="@string/seo_hint_event_link_maps"
                    app:errorEnabled="true"
                    android:enabled="@{!(vm.loading || vm.loadingUpdate)}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_event_link_maps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.eventLinkMaps}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.SEO.TextInputLayout"
                    android:hint="@string/seo_hint_event_location"
                    app:errorEnabled="true"
                    android:enabled="@{!(vm.loading || vm.loadingUpdate)}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_event_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="2"
                        android:maxLines="4"
                        android:text="@={vm.eventLocation}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.SEO.TextInputLayout"
                    android:hint="@string/seo_hint_event_cp"
                    app:errorEnabled="true"
                    android:enabled="@{!(vm.loading || vm.loadingUpdate)}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_event_cp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:text="@={vm.eventCp}"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <RelativeLayout
            android:id="@+id/container_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_alignParentBottom="true"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:text="@string/seo_btn_save"
                android:onClick="@{(v) -> vm.saveEvent()}"
                />
        </RelativeLayout>
    </RelativeLayout>


</layout>